[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/generic/entities/enemy_sack/textures/survival_enemy_sack.png" type="Texture" id=1]
[ext_resource path="res://scenes/generic/entities/enemy_sack/EnemySack.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=19]
radius = 50.0

[sub_resource type="Animation" id=20]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySackSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "get_hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySackSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.843137, 0.0509804, 0.0509804, 1 ), Color( 1, 1, 1, 1 ), Color( 0.843137, 0.0509804, 0.0509804, 1 ), Color( 1, 1, 1, 1 ), Color( 0.843137, 0.0509804, 0.0509804, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EnemySack" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemySackSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 18 )
animation = "idle"

[node name="fov" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="fov"]
shape = SubResource( 19 )

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="FindHit" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 12, 0 )

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="Animation" type="AnimationPlayer" parent="."]
anims/default = SubResource( 20 )
anims/get_hit = SubResource( 21 )
[connection signal="animation_finished" from="EnemySackSprite" to="." method="_on_EnemySackSprite_animation_finished"]
[connection signal="body_entered" from="fov" to="." method="_on_fov_body_entered"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_ChaseTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
